--- a/colmar/resources/styles.css
+++ b/colmar/resources/styles.css
@@ -6,7 +6,7 @@ html {
 }
 
 h1 {
-  color: black;
+  color: #1E1E1E;
   font-size: 42px;
   line-height: 55px;
   padding: 15px 0px;
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-color: black;
+color: #1E1E1E;
 font-size: 30px;
 line-height: 50px;
 font-weight: 600;
@@ -22,7 +22,7 @@ padding-bottom: 15px;
 }
 
 h3 {
-  color: black;
+  color: #1E1E1E;
   font-size: 23px;
   line-height: 35px;
   font-weight: 600;
@@ -32,6 +32,7 @@ h3 {
 p {
   line-height: 27px;
   padding-top: 10px;
+  color: #1E1E1E;
 }
 
 button {
@@ -103,10 +104,9 @@ nav ul li {
 }
 
 /* Orientation section */
-
 /* main information */
 .information-section {
-
+  display: none;
 }
 
 .information-main img {
@@ -150,21 +150,6 @@ nav ul li {
   color: lightblue;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Start section */
 
 .subjects h2 {
@@ -175,7 +160,7 @@ nav ul li {
 
 .start-section {
   padding: 32px 72px;
-  background-color: LightGrey;
+  /*background-color: LightGrey;*/
 }
 
 .subjects {
@@ -189,7 +174,7 @@ nav ul li {
 }
 
 .subject .subject-text {
-  background-color: white;
+  background-color: LightGrey;
   padding: 16px;
   height: 160px;
   align-self: stretch;
@@ -213,40 +198,46 @@ nav ul li {
 
 /* Thesis section */
 
+.thesis-section {
+  display: none;
+}
+
 .thesis-section h2 {
   margin-bottom: 32px;
   text-align: center;
   width: 100%;
 }
 
+/*
 .thesis-section {
   width: 100%;
   display: flex;
-}
+} */
 
 
 .video video {
   width: 60%;
-
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Footer */
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 0px 60px 0px;
+  border-top: solid;
+  border-color: LightGrey;
+  border-width: 0.5px;
+}
+
+footer .copyright {
+  padding-left: 24px;
+}
+
+footer .terms {
+  padding-right: 24px;
+}
+
+footer .terms span {
+  margin-left: 16px;
+}
