--- a/colmar/resources/styles.css
+++ b/colmar/resources/styles.css
@@ -1,7 +1,7 @@
 /* Overall styles */
 
 html {
-  font-size: 1em;
+  font-size: 16px;
   font-family: "Poppins";
 }
 
@@ -14,11 +14,11 @@ h1 {
 }
 
 h2 {
-color: #1E1E1E;
-font-size: 30px;
-line-height: 50px;
-font-weight: 600;
-padding-bottom: 15px;
+  color: #1E1E1E;
+  font-size: 30px;
+  line-height: 50px;
+  font-weight: 600;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -26,12 +26,12 @@ h3 {
   font-size: 23px;
   line-height: 35px;
   font-weight: 600;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 p {
-  line-height: 27px;
-  padding-top: 10px;
+  line-height: 28px;
+  padding-top: 5px;
   color: #1E1E1E;
 }
 
@@ -41,12 +41,73 @@ button {
   font-size: 16px;
   line-height: 23px;
   margin: 20px 0px;
-  width: 350px;
-  padding: 8px 0px;
-  background-color: DarkGrey;
+  width: 40%;
+  padding: 10px 0px;
+  background-color: #A68091;
+  border-color: #A68091;
+  color: #f2f2f2;
+}
+
+/* Media Queries for Overall styles */
+
+@media only screen and (max-width: 992px) {
+  h1 {
+    font-size: 37px;
+    line-height: 50px;
+  }
+
+  h2 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+    line-height: 45px;
+  }
+
+  h2 {
+    font-size: 25px;
+    line-height: 35px;
+  }
+
+  h3 {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  button {
+    width: 60%;
+  }
+
+}
+
+@media only screen and (max-width: 660px){
+  button {
+    width: 40%;
+  }
+
+  html {
+    font-size: 14px;
+  }
+
+  p {
+    line-height: 22px;
+  }
+
+}
+
+@media only screen and (max-width: 570px) {
+
 }
 
 /* Header section */
+
+.mobile-header {
+  display: none;
+}
 
 header {
   height: 64px;
@@ -85,72 +146,319 @@ nav ul li {
 /* Moodheader section */
 
 .moodheader {
+  width: 100%;
   margin-top: 65px;
-  background-color: LightGrey;
+  background-color: #F2F2F2;
   display: flex;
   display: inline-flex;
   align-items: center;
 }
 
-.moodheader img{
+.moodheader img {
   max-width: 60%;
   height: auto;
   margin: 32px 24px;
 }
 
 .mood-text {
-  width: 450px;
+  max-width: 38%;
+  padding: 40px;
+}
+
+/* Media Queries for Moodheader section */
+
+@media only screen and (max-width: 992px) {
+  .moodheader {
+    width: 100%;
+    margin-top: 65px;
+    background-color: #F2F2F2;
+    display: flex;
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .moodheader img {
+    max-width: 50%;
+    height: auto;
+    margin: 32px 24px;
+  }
+
+  .mood-text {
+    max-width: 50%;
+    padding: 30px;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+  .mood-text {
+    max-width: 50%;
+  }
+
+}
+
+@media only screen and (max-width: 660px) {
+  .moodheader {
+    width: 100%;
+    background-color: #F2F2F2;
+    display: inline-block;
+  }
+
+  .moodheader img {
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+  }
+
+  .mood-text {
+    display: inline-block;
+    max-width: 100%;
+  }
+
+}
+
+@media only screen and (max-width:570px) {
+  header {
+      display: none;
+  }
+
+  .mobile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 64px;
+  }
+
+  .mobile-header img {
+    margin: 0px 16px;
+  }
+
+  .moodheader {
+    width: 100%;
+    margin-top: 0px;
+  }
 
 }
 
 /* Orientation section */
-/* main information */
+
 .information-section {
-  display: none;
+  display:flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+/* main information */
+
+.information-main {
+  width: 58%;
 }
 
 .information-main img {
-  max-width: 60%;
+  max-width: 100%;
   height: auto;
-  margin: 32px 24px 0 24px;
+  margin: 32px 24px 0 32px;
 }
 
 .mainarticle-text {
-  margin: 32px 24px;
-  max-width: 60%;
+  margin: 32px;
+  max-width: 100%;
 }
 
-.mainarticle-text span {
-  font-style: italic;
-  margin-top: 30px;
+.information-main .mainarticle-text span {
+  display: inline-block;
+  font-weight: 600;
+  background-color: #F2F2F2;
+  color: #736662;
+  margin: 25px 0px;
+  padding: 8px;
 }
 
 /* side information */
 .information-side {
+  width: 38%;
   display: flex;
-  display: inline-flex;
   flex-direction: column;
+  padding-top: 16px;
+  border-left: solid;
+  border-width: 0.5px;
+  border-color: #F2F2F2
 }
 
 .information-side .article {
-  max-width: 40%;
+  display: flex;
   display: inline-flex;
+  justify-content: space-between;
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: #F2F2F2;
+  border-top: none;
+}
+
+.information-side .article .article-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 51%;
+  padding: 16px;
+}
+
+.information-side .article .article-text a {
+  padding-top: 10px;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+.information-side .article .desktop {
+  width: 40%;
 }
 
 .information-side .article .desktop img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  margin: 16px;
 }
 
-.information-side .article .mobile {
+.information-side .article .mobile img {
   display: none;
 }
 
 .information-side .article a {
-  color: lightblue;
+  color: #A68091;
+}
+
+.information-side .important {
+  background-color: #F2F2F2;
+}
+
+/* Media Queries for Information section*/
+
+@media only screen and (max-width: 1024px) {
+  .information-side .article .article-text{
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .information-main {
+    width: 48%;
+  }
+
+  .information-main .mainarticle-text {
+    width: 100%;
+  }
+
+  .information-side {
+    width: 46%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 16px;
+    border-left: solid;
+    border-width: 0.5px;
+    border-color: #F2F2F2
+  }
+
+}
+
+@media only screen and (max-width: 660px){
+  .information-section {
+    display: flex;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 32px;
+  }
+
+  .information-main {
+    width: 100%;
+  }
+
+  .information-main img {
+    margin: 0px;
+  }
+
+  .information-main .mainarticle-text {
+    width: 90%;
+    margin: 0 auto;
+    padding: 16px 0px;
+  }
+
+  .information-side {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .information-side .article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: inherit;
+  }
+
+  .information-side .article .desktop {
+      width: 85%;
+  }
+
+  .information-side .article .article-text {
+    width: 85%;
+  }
+
+}
+
+@media only screen and (max-width:570px) {
+  .information-main {
+    display: none;
+  }
+
+  .information-side .article .desktop img {
+    display: none;
+  }
+
+  .information-side .article .mobile {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .information-side .article .mobile img {
+    display: unset;
+    width: 100%;
+  }
+
+  .information-side {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    padding-bottom: 0px;
+  }
+
+  .information-side .article {
+    border: unset;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin: 16px 0px;
+  }
+
+  .information-side .article .article-text {
+    width: 85%;
+  }
+
+  .information-side .important {
+    background-color: white;
+  }
+
 }
 
 /* Start section */
+
+.subjects-mobile {
+  display: none;
+}
 
 .subjects h2 {
   margin-bottom: 10px;
@@ -160,7 +468,7 @@ nav ul li {
 
 .start-section {
   padding: 32px 72px;
-  /*background-color: LightGrey;*/
+  background-color: #F2F2F2;
 }
 
 .subjects {
@@ -174,18 +482,20 @@ nav ul li {
 }
 
 .subject .subject-text {
-  background-color: LightGrey;
-  padding: 16px;
-  height: 160px;
-  align-self: stretch;
+  background-color: white;
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  flex-grow: 1;
 }
 
 .subjects .subject {
   display: inline-flex;
   flex-direction: column;
-  max-width: 30%;
+  max-width: 32%;
   align-self: stretch;
-  padding-bottom: 32px;
+  padding-bottom: 25px;
 }
 
 .subjects .subject img {
@@ -194,29 +504,198 @@ nav ul li {
 
 .subject-text span {
   text-transform: uppercase;
+  padding: 10px 0px
+}
+
+/* Media Queries for Start section */
+
+@media only screen and (max-width: 1024px) {
+  .subjects {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .subjects .subject {
+    max-width: 48%;
+  }
+
+}
+
+@media only screen and (max-width: 570px) {
+  .start-section {
+    background-color: white;
+    padding: 0px;
+  }
+
+  .subjects-mobile {
+    display: unset;
+  }
+
+  .subjects {
+    display: none;
+  }
+
+  .subjects-mobile h2 {
+    width: 100%;
+    text-align: center;
+  }
+
+  .subject-mobile {
+    background-color: #F2F2F2;
+    width: 85%;
+    display: flex;
+    margin: 8px auto;
+  }
+
+  .subject-mobile .subject-title {
+    padding: 24px 0px 20px 16px;
+  }
+
 }
 
 /* Thesis section */
 
-.thesis-section {
-  display: none;
+.thesis {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .thesis-section h2 {
-  margin-bottom: 32px;
+  margin: 32px 0px;
   text-align: center;
+  max-width: 100%;
+}
+
+.video {
+  width: 58%;
+  padding-left: 32px;
+}
+
+.video video {
   width: 100%;
 }
 
-/*
-.thesis-section {
-  width: 100%;
+.video-text {
+  padding: 24px 0px;
+}
+
+.sidebar {
+  width: 38%;
   display: flex;
-} */
+  flex-direction: column;
+}
 
+.sidebar .article {
+  display: flex;
+  display: inline-flex;
+  justify-content: space-between;
+}
 
-.video video {
-  width: 60%;
+.sidebar .article .article-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 51%;
+  padding: 16px;
+}
+
+.sidebar .article .desktop {
+  width: 40%;
+}
+
+.sidebar .article .desktop img {
+  width: 100%;
+  margin: 16px;
+}
+
+.sidebar .important {
+  background-color: #F2F2F2;
+}
+
+/* Media Queries Thesis section */
+
+@media only screen and (max-width: 1024px) {
+  .sidebar .article .article-text{
+    width: 45%;
+  }
+
+}
+
+@media only screen and (max-width: 992px) {
+  .video {
+    width: 48%;
+    padding-left: 32px;
+  }
+
+  .sidebar {
+    width: 46%;
+    display: flex;
+    flex-direction: column;
+  }
+
+}
+
+@media only screen and (max-width: 660px) {
+  .thesis {
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 32px;
+  }
+
+  .video {
+    width: 90%;
+    padding-left: 32px;
+  }
+
+  .video video {
+    width: 100%;
+  }
+
+  .sidebar {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+  }
+
+  .sidebar .article {
+    width: 100%;
+    display: flex;
+    display: inline-block;
+    flex-direction: column;
+  }
+
+  .sidebar .article .desktop {
+    width: 90%;
+  }
+
+  .sidebar .article .article-text {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 570px){
+  .sidebar {
+    display: none;
+  }
+
+  .video-text {
+    display: none;
+  }
+
+  .video {
+    width: 100%;
+    padding-left: 0px
+  }
+
+  .thesis-section h2 {
+    margin: 32px 0px 16px 0px;
+    text-align: center;
+    max-width: 100%;
+}
+
 }
 
 /* Footer */
@@ -224,7 +703,7 @@ nav ul li {
 footer {
   display: flex;
   justify-content: space-between;
-  padding: 16px 0px 60px 0px;
+  padding: 16px 0px 45px 0px;
   border-top: solid;
   border-color: LightGrey;
   border-width: 0.5px;
@@ -240,4 +719,17 @@ footer .terms {
 
 footer .terms span {
   margin-left: 16px;
+}
+
+/* Media Query for Footer */
+
+@media only screen and (max-width: 570px) {
+  .terms {
+    display: none;
+  }
+
+  footer .copyright {
+    display: flex;
+    padding-top:32px;
+  }
 }
